# trilobyte

./: .cspell.json  Cargo.toml  README.md
.github/workflows/: ci.yml
trilobyte/: errors.rs  lib.rs  trilobyte.rs
