[package]
name = "trilobyte"
version = "0.1.0"
edition = "2024"
description = "data structure representing `3` bits"
autoexamples = false
autobenches = false
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/trilobyte"
license = "MIT"

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps", "-Zcustom_mir"]


[lib]
name = "trilobyte"
path = "trilobyte/lib.rs"
bench = false
