[package]
name = "trilobyte"
version = "0.1.2"
edition = "2021"
description = "data structure representing `3` bits"
autoexamples = false
autobenches = false
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/trilobyte"
license = "MIT"

[lib]
name = "trilobyte"
path = "trilobyte/lib.rs"
bench = false
